--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,20 @@
-name: Continuous Integration
-
-on:
-  - push
-  - workflow_dispatch
-
-jobs:
-  build:
-    runs-on: windows-latest
-
-    steps:
-      - name: Download ngrok
-        run: |
-          Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQW4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
-
-      - name: Extract ngrok
-        run: |
-          Expand-Archive ngrok.zip
-
-      - name: Authenticate ngrok
-        run: |
-          ./ngrok/ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
-        env:
-          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-
-      - name: Enable Remote Desktop
-        run: |
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
-
-      - name: Allow Remote Desktop through Firewall
-        run: |
-          Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-
-      - name: Configure RDP Authentication
-        run: |
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 1
-
-      - name: Set Admin Password
-        run: |
-          Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@sswOrd!" -Force)
-
-      - name: Start ngrok Tunnel for RDP
-        run: |
-          ./ngrok/ngrok.exe tcp 3389
+name: CI
+on: [push, workflow_dispatch] jobs:
+build:
+runs-on: windows-latest
+steps:
+- name: Download
+run: Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQW4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
+- name: Extract
+run: Expand-Archive ngrok.zip
+- name: Auth
+run: . Ingrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+env:
+NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+- name: Enable TS
+run: Set-ItemProperty -Path 'HKLM: \System\CurrentControlSet\Control \Terminal Server'-name "fDenyTSConnections" -Value 0
+- run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+- run: Set-ItemProperty -Path 'HKLM: (System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+- run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@sswOrd!" -Force)
+- name: Create Tunnel
+run: . \ngrok\ngrok.exe tcp 3389
